--- a/index.html
+++ b/index.html
@@ -6,10 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task-1</title>
+    <link rel="stylesheet" href="/task/stlyle.css">
+    <script src="/task/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="root">
+        <div class="nav">
+            <div class="title"> Centilio </div>
+            <div class="dash"> Dashboard</div>
+            <div class="pages">
+                PAGES
+                <div class="pagesCnt">
+                    <div class="users">Users</div>
+                    <div class="user">User Profile</div>
+                    <div class="account">Account</div>
+                    <div class="commers">E-commerce</div>
+                    <div class="projects">Projects</div>
+                    <div class="project">Project</div>
 
+                    <div class="auth">Authentication</div>
+                    <div class="api">API Keys</div>
+                    <div class="welcome">Welcome Page</div>
+                    <div class="kanban">Kanban</div>
+
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <header class="header"></header>
+            <div class="warpper">
+                <div class="cnt">
+                    Customers
+
+                    <button class="add">
+                        Add Customers
+                    </button>
+                </div>
+
+                <div class="content"></div>
+
+            </div>
+        </div>
+
+
+    </div>
 </body>
 
 </html>
