added icons and img

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 PAGES
                 <div class="pagesCnt">
                     <div class="users">Users</div>
+
                     <div class="user">User Profile</div>
                     <div class="account">Account</div>
                     <div class="commers">E-commerce</div>
@@ -37,7 +38,21 @@
             </div>
         </div>
         <div class="main">
-            <header class="header"></header>
+            <header class="header">
+
+                <label class="search" for="search">
+                    <input type="search" name="acb" id="search">
+                </label>
+
+                <div class="profile">
+                    <div class="bell"></div>
+                    <div class="notificaion"></div>
+                    <div class="menu"></div>
+                    <div class="profileImg">
+                        <img src="pic1.svg" alt="profile img">
+                    </div>
+                </div>
+            </header>
             <div class="warpper">
                 <div class="cnt">
                     Customers
