working on main secion

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
                     </div>
                 </div>
             </header>
-            <div class="warpper">
+            <div class="wrapper">
                 <div class="cnt">
-                    Customers
+
+                    <span>
+                        Customers
+                        <span class="num">97,524</span>
+                    </span>
 
                     <button class="add">
                         Add Customers
