completed on main secion

--- a/index.html
+++ b/index.html
@@ -21,13 +21,51 @@
             <div class="pages">
                 PAGES
                 <div class="pagesCnt">
-                    <div class="users">Users</div>
+                    <div class="users">
+                        <span>Users</span>
+                        <div class="subDiv">
+                            <div class="s1">temp</div>
+                            <div class="s2">temp</div>
+                            <div class="s3">temp</div>
+                        </div>
+                    </div>
 
-                    <div class="user">User Profile</div>
-                    <div class="account">Account</div>
-                    <div class="commers">E-commerce</div>
-                    <div class="projects">Projects</div>
-                    <div class="project">Project</div>
+                    <div class="user">
+                        <span>User Profile</span>
+                        <div class="subDiv">
+                            <div class="s1">temp</div>
+                            <div class="s2">temp</div>
+                            <div class="s3">temp</div>
+                        </div>
+                    </div>
+                    <div class="account"><span>Account</span>
+                        <div class="subDiv">
+                            <div class="s1">Settings</div>
+                            <div class="s2">Billing</div>
+                            <div class="s3">Invoice</div>
+                        </div>
+                    </div>
+                    <div class="commers"><span>E-commerce</span>
+                        <div class="subDiv">
+                            <div class="s1">temp</div>
+                            <div class="s2">temp</div>
+                            <div class="s3">temp</div>
+                        </div>
+                    </div>
+                    <div class="projects"><span>Projects</span>
+                        <div class="subDiv">
+                            <div class="s1">temp</div>
+                            <div class="s2">temp</div>
+                            <div class="s3">temp</div>
+                        </div>
+                    </div>
+                    <div class="project"><span>Project</span>
+                        <div class="subDiv">
+                            <div class="s1">temp</div>
+                            <div class="s2">temp</div>
+                            <div class="s3">temp</div>
+                        </div>
+                    </div>
 
                     <div class="auth">Authentication</div>
                     <div class="api">API Keys</div>
@@ -41,7 +79,7 @@
             <header class="header">
 
                 <label class="search" for="search">
-                    <input type="search" name="acb" id="search">
+                    <input type="search" name="acb" id="search" placeholder="search in front">
                 </label>
 
                 <div class="profile">
@@ -66,8 +104,107 @@
                     </button>
                 </div>
 
-                <div class="content"></div>
+                <div class="content">
+                    <div class="searchbar">
+                        <label class="search" for="searchOrder">
+                            <input type="search" name="acb" id="searchOrder" placeholder="Search orders">
+                        </label>
+                        <div class="right">
+                            <div class="select">
+                                <span>0</span>
+                                Selected
+                            </div>
+                            <button class="del">
+                                Delete
+                            </button>
+                        </div>
 
+
+                    </div>
+                    <div class="table">
+                        <div class="r1">
+                            <input type="checkbox">
+
+                            <span>NAME</span>
+                            <span>E-MAIL</span>
+                            <span>PHONE</span>
+                            <span>COMPANY</span>
+                            <span>ACCOUNT STATUS</span>
+                            <span>ORDERS</span>
+                        </div>
+
+                        <div class="r2">
+                            <div class="col c1">
+                                <input type="checkbox">
+                                <input type="checkbox">
+                                <input type="checkbox">
+                                <input type="checkbox">
+                            </div>
+                            <div class="col c2">
+                                <span>Amanda Harvey</span>
+                                <span>Anne Richard</span>
+                                <span>Bob Dean</span>
+                                <span>Brian Hailigan</span>
+                            </div>
+                            <div class="col c3">
+                                <span>amanda@site.com</span>
+                                <span>anne@site.com</span>
+                                <span>bob@site.com</span>
+                                <span>brian@site.com </span>
+                            </div>
+                            <div class="col c7">
+                                <span>+1-202-555-0140</span>
+                                <span>+1-752235-2353</span>
+                                <span>+1-854-235-9755</span>
+                                <span> +1-141-463-1512</span>
+                            </div>
+                            <div class="col c4">
+                                <span>United Kingdom</span>
+                                <span>United States</span>
+                                <span>Austria</span>
+                                <span>France</span>
+
+                            </div>
+
+                            <div class="col c5">
+                                <span class="ac">Active</span>
+                                <span class="dc">Disabled</span>
+                                <span class="dc">Disabled</span>
+                                <span class="ac">Active</span>
+                            </div>
+                            <div class="col c6">
+                                <span>3</span>
+                                <span>1</span>
+                                <span>8</span>
+                                <span>1</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="foot">
+                        <div class="left">
+                            <span>showing</span>
+                            <select name="" id="">
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="15">15</option>
+                                <option value="20">20</option>
+
+                            </select>
+                            <span>
+                                of 24
+                            </span>
+                        </div>
+                        <div class="right">
+                            <button>prev</button>
+                            <button class="active">1</button>
+                            <button>2</button>
+                            <button>3</button>
+                            <button>next</button>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
