--- a/index.html
+++ b/index.html
@@ -21,46 +21,52 @@
             <div class="pages">
                 PAGES
                 <div class="pagesCnt">
-                    <div class="users">
-                        <span>Users</span>
-                        <div class="subDiv">
+                    <div>
+                        <span class="users"> <span data-index="1" class="exp">Users</span> </span>
+
+                        <div class="subDiv v1">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
                             <div class="s3">temp</div>
                         </div>
                     </div>
 
-                    <div class="user">
-                        <span>User Profile</span>
-                        <div class="subDiv">
+                    <div>
+                        <span class="user">
+                            <span data-index="2" class="exp">User Profile</span></span>
+                        <div class="subDiv v2">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
                             <div class="s3">temp</div>
                         </div>
                     </div>
-                    <div class="account"><span>Account</span>
-                        <div class="subDiv">
+                    <div>
+                        <span class="account"><span data-index="3" class="exp">Account</span></span>
+                        <div class="subDiv v3">
                             <div class="s1">Settings</div>
                             <div class="s2">Billing</div>
                             <div class="s3">Invoice</div>
                         </div>
                     </div>
-                    <div class="commers"><span>E-commerce</span>
-                        <div class="subDiv">
+
+                    <div>
+                        <span class="commers"><span data-index="4" class="exp">E-commerce</span></span>
+                        <div class="subDiv v4">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
                             <div class="s3">temp</div>
                         </div>
                     </div>
-                    <div class="projects"><span>Projects</span>
-                        <div class="subDiv">
+                    <div>
+                        <span class="projects"><span data-index="5" class="exp">Projects</span></span>
+                        <div class="subDiv v5">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
                             <div class="s3">temp</div>
                         </div>
                     </div>
-                    <div class="project"><span>Project</span>
-                        <div class="subDiv">
+                    <div><span class="project"><span data-index="6" class="exp">Project</span></span>
+                        <div class="subDiv v6">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
                             <div class="s3">temp</div>
@@ -83,12 +89,17 @@
                 </label>
 
                 <div class="profile">
-                    <div class="bell"></div>
+                    <div class="bell">
+                        <div class="red dot"> </div>
+
+                    </div>
                     <div class="notificaion"></div>
                     <div class="menu"></div>
                     <div class="profileImg">
                         <img src="pic1.svg" alt="profile img">
+                        <div class="green dot"> </div>
                     </div>
+
                 </div>
             </header>
             <div class="wrapper">
@@ -111,7 +122,7 @@
                         </label>
                         <div class="right">
                             <div class="select">
-                                <span>0</span>
+                                <span class="count">0</span>
                                 Selected
                             </div>
                             <button class="del">
@@ -123,7 +134,7 @@
                     </div>
                     <div class="table">
                         <div class="r1">
-                            <input type="checkbox">
+                            <input type="checkbox" class="checkAll" data-index="0">
 
                             <span>NAME</span>
                             <span>E-MAIL</span>
@@ -141,7 +152,7 @@
                                 <input type="checkbox">
                             </div>
                             <div class="col c2">
-                                <span>Amanda Harvey</span>
+                                <span class="verify">Amanda Harvey</span>
                                 <span>Anne Richard</span>
                                 <span>Bob Dean</span>
                                 <span>Brian Hailigan</span>
