--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 <body>
     <div class="root">
         <div class="nav">
-            <div class="title"> Centilio </div>
-            <div class="dash"> Dashboard</div>
+
+            <div class="title">
+                <span class="logo">C <div class="squr"> </div></span> Centilio
+            </div>
+            <div class="dashwrap">
+                <div class="dash"> Dashboard</div>
+            </div>
             <div class="pages">
                 PAGES
                 <div class="pagesCnt">
@@ -33,7 +38,9 @@
 
                     <div>
                         <span class="user">
-                            <span data-index="2" class="exp">User Profile</span></span>
+                            <span data-index="2" class="exp">User Profile <span class="noti">5</span></span>
+
+                        </span>
                         <div class="subDiv v2">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
@@ -50,7 +57,7 @@
                     </div>
 
                     <div>
-                        <span class="commers"><span data-index="4" class="exp">E-commerce</span></span>
+                        <span class="commers crt"><span data-index="4" class="exp">E-commerce</span></span>
                         <div class="subDiv v4">
                             <div class="s1">temp</div>
                             <div class="s2">temp</div>
@@ -83,6 +90,9 @@
         </div>
         <div class="main">
             <header class="header">
+                <div class="circle">
+
+                </div>
 
                 <label class="search" for="search">
                     <input type="search" name="acb" id="search" placeholder="search in front">
@@ -194,7 +204,7 @@
                     </div>
                     <div class="foot">
                         <div class="left">
-                            <span>showing</span>
+                            <span>Showing</span>
                             <select name="" id="">
                                 <option value="5">5</option>
                                 <option value="10">10</option>
